<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.android.sitbak.auth.change_password.ChangePasswordVM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/heavy_metal"
        tools:context=".auth.change_password.ChangePasswordActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/topBarLayout"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/heavy_metal"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_6sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="?selectableItemBackgroundBorderless"
                android:backgroundTint="@color/white"
                android:clickable="true"
                android:focusable="true"
                android:padding="@dimen/_8sdp"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:fontFamily="@font/inter_bold"
                android:text="@string/change_password"
                android:textColor="@color/tasman7"
                android:textSize="19sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tvOldPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/inter_regular"
            android:paddingVertical="@dimen/_5sdp"
            android:text="@string/old_password"
            android:textColor="@color/finlandia"
            android:textFontWeight="400"
            android:textSize="@dimen/_9sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topBarLayout" />


        <EditText
            android:id="@+id/etOldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/white_7_bakcground_rectangle"
            android:inputType="textPassword"
            android:maxLength="15"
            android:paddingHorizontal="@dimen/_5sdp"
            android:paddingVertical="@dimen/_10sdp"
            android:textColor="@color/tasman7"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintTop_toBottomOf="@id/tvOldPassword" />

        <ImageView
            android:id="@+id/ivOldPasswordToggle"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="5dp"
            android:padding="3dp"
            android:src="@drawable/ic_show_password"
            app:layout_constraintBottom_toBottomOf="@id/etOldPassword"
            app:layout_constraintRight_toRightOf="@id/etOldPassword"
            app:layout_constraintTop_toTopOf="@id/etOldPassword" />

        <TextView
            android:id="@+id/tvNewPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/inter_regular"
            android:paddingVertical="@dimen/_5sdp"
            android:text="@string/new_password"
            android:textColor="@color/finlandia"
            android:textFontWeight="400"
            android:textSize="@dimen/_9sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etOldPassword" />


        <EditText
            android:id="@+id/etNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/white_7_bakcground_rectangle"
            android:inputType="textPassword"
            android:maxLength="15"
            android:paddingHorizontal="@dimen/_5sdp"
            android:paddingVertical="@dimen/_10sdp"
            android:textColor="@color/tasman7"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintTop_toBottomOf="@id/tvNewPassword" />

        <ImageView
            android:id="@+id/ivNewPasswordToggle"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="5dp"
            android:padding="3dp"
            android:src="@drawable/ic_show_password"
            app:layout_constraintBottom_toBottomOf="@id/etNewPassword"
            app:layout_constraintRight_toRightOf="@id/etNewPassword"
            app:layout_constraintTop_toTopOf="@id/etNewPassword" />

        <TextView
            android:id="@+id/tvConfirmPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/inter_regular"
            android:paddingVertical="@dimen/_5sdp"
            android:text="@string/confirm_password"
            android:textColor="@color/finlandia"
            android:textFontWeight="400"
            android:textSize="@dimen/_9sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etNewPassword" />

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/white_7_bakcground_rectangle"
            android:inputType="textPassword"
            android:maxLength="15"
            android:paddingHorizontal="@dimen/_5sdp"
            android:paddingVertical="@dimen/_10sdp"
            android:textColor="@color/tasman7"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintTop_toBottomOf="@id/tvConfirmPassword" />

        <ImageView
            android:id="@+id/ivConfirmPasswordToggle"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="5dp"
            android:padding="3dp"
            android:src="@drawable/ic_show_password"
            app:layout_constraintBottom_toBottomOf="@id/etConfirmPassword"
            app:layout_constraintRight_toRightOf="@id/etConfirmPassword"
            app:layout_constraintTop_toTopOf="@id/etConfirmPassword" />

        <TextView
            android:id="@+id/btnChangePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/green_900_background"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/inter_regular"
            android:gravity="center"
            android:paddingVertical="@dimen/_12sdp"
            android:text="@string/change_password"
            android:textColor="@color/tasman7"
            android:textFontWeight="400"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>